--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "nodemon ./bin/www",
+    "import-csv": "node scripts/importCsvData.js",
+    "test-api": "node scripts/testApi.js",
+    "test-db": "node scripts/testDatabase.js"
   },
   "dependencies": {
+    "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.13",
     "debug": "~2.6.9",
     "dotenv": "^16.6.1",
     "express": "~4.16.1",
@@ -16,13 +21,14 @@
     "jade": "~1.11.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "~1.9.1",
-    "node-cron": "^4.2.1",
     "pg": "^8.16.3",
-    "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7"
   },
   "main": "app.js",
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "nodemon": "^3.1.10"
+  }
 }
