--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www",
+    "start": "node ./bin/www",
     "import-csv": "node scripts/importCsvData.js",
     "test-api": "node scripts/testApi.js",
     "test-db": "node scripts/testDatabase.js"
