--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "import-csv": "node scripts/importCsvData.js",
-    "test-api": "node scripts/testApi.js",
+    "test-api": "node 6scripts/testApi.js",
     "test-db": "node scripts/testDatabase.js"
   },
   "dependencies": {
